--- a/.travis.yml
+++ b/.travis.yml
@@ -1,70 +1,19 @@
---- 
-after_script: "set +e"
-before_cache: 
-  - "chmod -R a+r $HOME/.cargo"
-before_deploy: 
-  - "sh ci/before_deploy.sh"
-before_install: 
-  - "set -e"
-  - "rustup self update"
-#branches: 
-#  only: 
-#    - /^v\d+\.\d+\.\d+.*$/
-#    - master
 cache: cargo
 dist: trusty
 env: 
   global: 
     - CRATE_NAME=ngraph
 install: 
-  - "sh ci/install.sh"
   - "source ~/.cargo/env || true"
 language: rust
 matrix: 
   include: 
     - 
-      env: TARGET=aarch64-unknown-linux-gnu
-    - 
-      env: TARGET=arm-unknown-linux-gnueabi
-    - 
-      env: TARGET=armv7-unknown-linux-gnueabihf
-    - 
-      env: TARGET=i686-unknown-linux-gnu
-    - 
-      env: TARGET=i686-unknown-linux-musl
-    - 
-      env: TARGET=mips-unknown-linux-gnu
-    - 
-      env: TARGET=mips64-unknown-linux-gnuabi64
-    - 
-      env: TARGET=mips64el-unknown-linux-gnuabi64
-    - 
-      env: TARGET=mipsel-unknown-linux-gnu
-    - 
-      env: TARGET=powerpc-unknown-linux-gnu
-    - 
-      env: TARGET=powerpc64-unknown-linux-gnu
-    - 
-      env: TARGET=powerpc64le-unknown-linux-gnu
-    - 
-      env: "TARGET=s390x-unknown-linux-gnu DISABLE_TESTS=1"
-    - 
       env: TARGET=x86_64-unknown-linux-gnu
-    - 
-      env: TARGET=x86_64-unknown-linux-musl
-    - 
-      env: TARGET=i686-apple-darwin
-      os: osx
-    - 
+    -
       env: TARGET=x86_64-apple-darwin
       os: osx
-    - 
-      env: "TARGET=i686-unknown-freebsd DISABLE_TESTS=1"
-    - 
-      env: "TARGET=x86_64-unknown-freebsd DISABLE_TESTS=1"
-    - 
-      env: "TARGET=x86_64-unknown-netbsd DISABLE_TESTS=1"
-    - 
+    -
       env: TARGET=x86_64-pc-windows-gnu
     - 
       env: TARGET=x86_64-unknown-linux-gnu
@@ -77,6 +26,5 @@ notifications:
   email: 
     on_success: never
 script: 
-  - "bash ci/script.sh"
-services: docker
+  - echo "Hello World!"
 sudo: required
