--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,8 @@ notifications:
     on_success: never
 script: 
   - "git clone https://github.com/NervanaSystems/ngraph"
+  - "cd ngraph && mkdir build && cd build"
+  - "cmake .. -DNGRAPH_USE_PREBUILT_LLVM"
+  - "make -j5 && sudo make install"
+  - "cd && ls"
 sudo: required
