--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,13 @@ env: TARGET=x86_64-unknown-linux-gnu
 notifications: 
   email: 
     on_success: never
-script: 
+script:
+  - "ls"
   - "git clone https://github.com/NervanaSystems/ngraph"
-  - "cd ngraph && mkdir build && cd build"
+  - "cd ngraph"
+  - "mkdir build"
+  - "cd build"
+  - "ls"
   - "cmake .. -DNGRAPH_USE_PREBUILT_LLVM"
   - "make -j5 && sudo make install"
-  - "cd && ls"
 sudo: required
