--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
     - CRATE_NAME=ngraph
 install: 
   - "source ~/.cargo/env || true"
-  - "wget wget --no-check-certificate https://drive.google.com/open?id=1kQlEjpxWoJ3rmbbhcx6qSS6vbahILh8r -O ngraph_20190525-1_amd64.deb"
+  - "wget --no-check-certificate https://drive.google.com/open?id=1kQlEjpxWoJ3rmbbhcx6qSS6vbahILh8r -O ngraph_20190525-1_amd64.deb"
   - "sudo dpkg -i ngraph_20190525-1_amd64.deb"
 language: rust
 env: TARGET=x86_64-unknown-linux-gnu
