--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ env:
     - CRATE_NAME=ngraph
 install: 
   - "source ~/.cargo/env || true"
-  - "wget --no-check-certificate https://drive.google.com/open?id=1kQlEjpxWoJ3rmbbhcx6qSS6vbahILh8r -O ngraph_20190525-1_amd64.deb"
-  - "sudo dpkg -i ngraph_20190525-1_amd64.deb"
+  - "wget --no-check-certificate https://drive.google.com/open?id=1n4YwBj5AHRMUlJwyQwxyWP-4Q34RG5YL -O ngraph-build"
+  - "cd ngraph-build"
+  - "sudo make install"
 language: rust
 env: TARGET=x86_64-unknown-linux-gnu
 notifications: 
