--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ notifications:
   email: 
     on_success: never
 script:
-  - "cd $TRAVIS_BUILD_DIR"
-  - "cargp build --examples"
+  - "cd '$TRAVIS_BUILD_DIR'"
+  - "cargo build --examples"
   - "cargo test"
   - "cargo run --example computation_example"
 sudo: required
