--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - "cd build"
   - "cmake .. -DNGRAPH_USE_PREBUILT_LLVM=ON -DNGRAPH_UNIT_TEST_ENABLE=OFF -DNGRAPH_NOP_ENABLE=OFF -DNGRAPH_TOOLS_ENABLE=OFF -DNGRAPH_CPU_ENABLE=OFF"
   - "sudo make install"
+  - "sudo ldconfig -v"
 language: rust
 env: TARGET=x86_64-unknown-linux-gnu
 notifications: 
