--- a/.travis.yml
+++ b/.travis.yml
@@ -6,20 +6,13 @@ env:
     - CRATE_NAME=ngraph
 install: 
   - "source ~/.cargo/env || true"
-  - "git clone https://github.com/NervanaSystems/ngraph"
-  - "cd ngraph"
-  - "mkdir build"
-  - "cd build"
-  - "cmake .. -DNGRAPH_USE_PREBUILT_LLVM=ON -DNGRAPH_UNIT_TEST_ENABLE=OFF -DNGRAPH_NOP_ENABLE=OFF -DNGRAPH_TOOLS_ENABLE=OFF -DNGRAPH_CPU_ENABLE=OFF"
-  - "sudo make install"
-  - "sudo ldconfig -v"
 language: rust
 env: TARGET=x86_64-unknown-linux-gnu
 notifications: 
   email: 
     on_success: never
 script:
-  - "cargo build --examples"
+  - "travis_wait cargo build --examples"
   - "cargo test"
-  - "cargo run --example computation_example"
+  - "cargo run --example mean_reverse"
 sudo: required
