chore(ci): disable CPU backend in CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ install:
   - "source ~/.cargo/env || true"
 language: rust
 env:
-  - TARGET=x86_64-unknown-linux-gnu
   - NGRAPH_CPU_ENABLE=OFF
+#  - TARGET=x86_64-unknown-linux-gnu
 notifications:
   email:
     on_success: never
