feat(*): integrate onnx shape inference

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ repository = "https://github.com/charles-r-earp/ngraph-rs"
 keywords = ["Auto", "Learning", "Tensor", "Grad", "Graph"]
 
 [dependencies]
-cpp = "0.5.1"
+cpp = "^0.5.1"
+onnx-pb = "^0.1.4"
+prost = "^0.6.1"
 
 [build-dependencies]
 cpp_build = "0.5.1"
@@ -20,3 +22,5 @@ cmake = "^0.1.42"
 
 [dev-dependencies]
 rand = "^0.7.2"
+onnx-helpers = "^2.2.1"
+petgraph = "^0.5.1"
